src/scss/components/_markers.scss
:root {
  --blue-france-sun-113-625: #000091;
  --red-marianne-main-472: #e1000f;
}

.marker-default,
.marker-cnfs {
  .marker-body {
    transform: translateY(11px);
    transition: 0.35s cubic-bezier(0.3, 0.8, 0.55, 1.9);

    .marker-shape {
      stroke: $white;
      stroke-width: 2px;
    }

    .marker-shadow {
      opacity: 0;
      transition: opacity 0.4s ease-in-out;
    }

    .marker-opening-status {
      stroke: $white;
      stroke-width: 3;
    }
  }

  .marker-base {
    opacity: 0;
    transition: 0.5s;
  }
}

.marker-default {
  .marker-shape,
  .marker-base {
    fill: $primary;
  }
}

.marker-cnfs {
  .marker-shape,
  .marker-base {
    fill: var(--red-marianne-main-472);
  }

  .marker-shape-in {
    fill: var(--blue-france-sun-113-625);
  }

  .marker-shape-out {
    fill: $white;
  }
}

.marker-focus,
.marker-hover {
  z-index: $zindex-sticky !important;

  .marker-default,
  .marker-cnfs {
    .marker-base {
      opacity: 1;
    }

    .marker-body {
      transform: translateY(0);
    }
  }
}

.marker-status-closed {
  .marker-opening-status {
    fill: $muted;
  }
}

.marker-status-open {
  .marker-opening-status {
    fill: $success;
  }
}

.marker-status-unknown {
  .marker-opening-status {
    display: none;
  }
}

.marker-group {
  .marker-group-bg,
  .marker-group-fg {
    @include marker-dimensions($marker-group-size);

    position: absolute;
    top: 50%;
    left: 50%;
    transition: 500ms cubic-bezier(0.32, 2.4, 0.55, 0.56);
  }

  .shadow-sm {
    opacity: 0;
    transition: opacity 0.4s ease-in-out;
  }
}

.marker-hover {
  .marker-group .shadow-sm {
    opacity: 1;
  }

  .marker-group-bg {
    @include marker-dimensions($marker-group-size-bg-hover);
  }

  .marker-group-fg {
    @include marker-dimensions($marker-group-size-fg-hover);
  }
}

